--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -3,6 +3,7 @@
         "app_function": "server.app",
         "aws_region": "us-east-1",
         "profile_name": "default",
-        "s3_bucket": "bubbles"
+        "s3_bucket": "bubbles",
+        "exclude": ["static/*"],
     }
 }
