--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -6,5 +6,10 @@
         "s3_bucket": "bubbles-config",
         "exclude": ["*.jpg", "*.json"],
         "runtime": "python2.7",
+        "extra_permissions": [{ // Attach any extra permissions to this policy. Default None
+            "Effect": "Allow",
+            "Action": ["s3:*"], // AWS Service ARN
+            "Resource": "arn:aws:s3:::bubbles*"
+        }],
     }
 }
