--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
 
-static/*
+static/json/*
+static/panos/*
+static/previews/*
+static/small/*
